# YouiTestApp

./: .gitignore  README.md  README.youi.md  index.youi.js  movies.js  package.json
src/: App.js
youi/: CMakeLists.txt  SourceList.cmake  build.rb  generate.rb  reinstall.rb
youi/AE/: PDP.aep
youi/AE/assets/layout/default/: PDP_Btn-Next.layout  PDP_Btn-Next.timeline  PDP_Btn-Previous.layout  PDP_Btn-Previous.timeline  PDP_Image-16x9.layout  PDP_Image-16x9.timeline  PDP_Image-2x3.layout  PDP_Image-2x3.timeline  PDP_Main.layout  PDP_Main.timeline  PDP_controls.layout  PDP_controls.timeline
youi/android/modules/app/: YiModuleDefinition.cmake
youi/android/modules/app/src/main/java/tv/youi/: Dummy.java
youi/src/: App.cpp  App.h  AppFactory.cpp
